сохранение гистерезиса температуры

--- a/data/heating_stats.html
+++ b/data/heating_stats.html
@@ -19,9 +19,9 @@
         </div>
     </div>
     <div class="container">
-        <button class="button" onclick="refreshStats()">Обновить статистику</button>
         <!-- Добавляем кнопку сброса статистики -->
-        <button class="button" onclick="resetStats()">Сбросить статистику</button>
+        <button class="button" style="background-color: chocolate; float: right;" onclick="resetStats()">Сбросить</button>
+        <button class="button" onclick="refreshStats()">Обновить</button>        
     </div>
     <div class="container">
         <table id="stats-table">
