--- a/data/index.html
+++ b/data/index.html
@@ -29,19 +29,15 @@
         <div id="serverInfoContainer">
             <!-- Отображение информации о сервере -->
         </div>
-        <button onclick="resetWorkTime()">Сбросить время работы</button>
+        <button onclick="resetWorkTime()" style="background-color: chocolate;">Сбросить время работы</button>
     </div>
 
     <div class="container">
         <h2>Гистерезис температуры</h2>
-        <form method="post" action="/save_hysteresis_temp">
-            <div>
-                <label for="hysteresis_temp">Значение:</label>
-                <input type="number" required id="hysteresis_temp" name="hysteresis_temp" min="1" max="10"
-                    step="0.1"></input>
-            </div>
-            <button type="submit">Сохранить</button>
-        </form>
+        <div>
+            <input type="number" id="hysteresis_temp" name="hysteresis_temp" min="1" max="10" step="0.1"></input>
+            <button type="button" onclick="saveHysteresisTemp()">Сохранить</button>
+        </div>        
     </div>
     </div>
 
@@ -116,7 +112,7 @@
                 const heatingActive = document.createElement('div');
                 heatingActive.textContent = `Обогрев: ${device.heatingActive ? 'включен' : 'выключен'}`;
                 if (device.heatingActive) {
-                    heatingActive.style.color = 'green';
+                    heatingActive.style.color = 'orange';
                 }
                 info.appendChild(temperature);
                 info.appendChild(humidity);
@@ -150,6 +146,36 @@
                 });
         }
 
+        async function saveHysteresisTemp() {
+            try {
+                const hysteresisTemp = document.getElementById('hysteresis_temp').value;
+                if (hysteresisTemp < 1 || hysteresisTemp > 10) {
+                    alert("Значение гистерезиса температуры должно быть в диапазоне от 1 до 10");
+                    return;
+                }
+
+                if (!confirm('Вы уверены, что хотите сохранить новое значение гистерезиса температуры?')) {
+                    return;
+                }
+
+                const formData = new FormData();
+                formData.append('hysteresis_temp', hysteresisTemp);
+
+                const response = await fetch('/save_hysteresis_temp', {
+                    method: 'post',
+                    body: formData
+                });
+
+                if (response.ok) {
+                    alert('Гистерезис температуры успешно сохранен');
+                } else {
+                    alert('Ошибка при сохранении гистерезиса температуры');
+                }
+            } catch (error) {
+                console.error('Ошибка при сохранении гистерезиса температуры:', error);
+                alert('Ошибка при сохранении гистерезиса температуры');
+            }
+        }
 
         function displayServerInfo(data) {
             const serverContainer = document.getElementById('serverInfoContainer');
